force-app/main/default/objects/Home_Visit__c/Home_Visit__c.object-meta.xml
<CustomObject>
    <label>Home Visit</label>
    <nameField>
        <label>Home Visit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Visit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>