force-app/main/default/objects/Home_Visit__c/fields/Patient_Signature__c.field-meta.xml
<CustomField>
    <fullName>Patient_Signature__c</fullName>
    <description>For Compliance</description>
    <label>Patient Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>