force-app/main/default/objects/Home_Visit__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who requested the visit (Patient)</description>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Home Visit</relationshipLabel>
    <relationshipName>Home_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>