force-app/main/default/objects/Home_Visit__c/fields/Scheduled_By__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Coordinator</description>
    <label>Scheduled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>