force-app/main/default/objects/Home_Visit__c/fields/Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Visit_Location__c</fullName>
    <label>Visit Location</label>
    <type>TextArea</type>
</CustomField>