force-app/main/default/objects/Home_Visit__c/fields/Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Summary__c</fullName>
    <label>Visit Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>