force-app/main/default/objects/Home_Visit__c/fields/Visiting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Doctor/Nurse</description>
    <label>Visiting Provider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Visit1</relationshipName>
    <type>Lookup</type>
</CustomField>